[gd_scene load_steps=3 format=2]

[ext_resource path="res://BackGroundsAndPlacements/BackgroundPlacer.gd" type="Script" id=1]
[ext_resource path="res://Creature/Scripts (creature)/MainScene.gd" type="Script" id=2]

[node name="MainScene" type="Node2D"]
z_index = 100
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Node" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Node2" type="Node" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 764.5, 1059.06 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
